<resources>
    <string name="app_name">Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="click_here">Click Here</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="enter_valid_email">Email Id is not valid</string>
    <string name="enter_email">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_occ">Enter Your Occupation</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mode">Night</string>
</resources>